# chessY

./: TODO.md  ai_agent.md
apps/backend/: manage.py  pyproject.toml
apps/backend/accounts/: admin.py  apps.py  models.py
apps/backend/accounts/api/: serializers.py  urls.py  views.py
apps/backend/accounts/management/commands/: seed_initial_data.py
apps/backend/games/: admin.py  apps.py  consumers.py  models.py  routing.py  tasks.py
apps/backend/games/api/: serializers.py  urls.py  views.py
apps/backend/games/services/: chess_engine.py  elo.py  gameplay.py
apps/backend/games/utils/: __init__.py  broadcast.py
apps/backend/shamchess_backend/: asgi.py  celery.py  routing.py  urls.py  wsgi.py
apps/backend/shamchess_backend/settings/: __init__.py  base.py
apps/web/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.node.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: theme-toggle.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/features/game/: types.ts
apps/web/src/features/lobby/: types.ts
apps/web/src/hooks/: use-game-socket.ts  use-lobby-socket.ts  use-shamchess-socket.ts
apps/web/src/i18n/: config.ts
apps/web/src/layouts/: app-shell.tsx
apps/web/src/pages/: game.tsx  lobby.tsx  profile.tsx  tournaments.tsx
apps/web/src/pages/auth/: login.tsx  register.tsx
apps/web/src/providers/: rtl-provider.tsx  theme-provider.tsx
apps/web/src/services/: api-client.ts  matchmaking.ts  profile.ts  tournaments.ts
apps/web/src/store/: realtime-store.ts
(+9 files in other folders)
